# SketchM

./: Cargo.toml  README.md  clippy.toml
docs/: CommandLineHelp.md
src/: cli.rs  config.rs  distance.rs  frac_min_hash.rs  genome.rs  hashing.rs  index_sketches.rs  io_utils.rs  logging.rs  main.rs  maybe_gzip_io.rs  progress.rs  sketch.rs  sketch_params.rs
