[package]
name = "sketchm"
version = "0.1.0"
authors = ["Donovan Parks"]
description = "Fast genome ANI estimation using k-mer sketches."
readme = "../README.md"
edition = "2018"

[dependencies]
ahash = "0.8.*"
anyhow = "1.0.*"
bincode = "1.3.*"
chrono = "0.4.*"
clap = { version = "4.4.*", features = ["derive"] }
csv = "1.2.*"
flate2 = "1.0.*"
gzp = "0.11.*"
indicatif = "0.17.*"
log = "0.4.*"
log4rs = "1.2.*"
needletail = "0.5.*"
num-format = "0.4.*"
rayon = "1.8.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
itertools = " 0.11.*"